--- a/python/Pipfile
+++ b/python/Pipfile
@@ -4,9 +4,20 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-openai = "0.27.4"
+openai = "==0.27.4"
+python-dotenv = "==1.0.0"
 
 [dev-packages]
+pytest = "5.4.3"
+pytest-asyncio = "==0.19.0"
+pytest-sugar = "==0.9.5"
+flake8 = "==5.0.4"
+black = "==22.10.0"
+isort = "==5.10.1"
+autoflake = "==1.7.0"
+pyright = "==1.1.295"
+pylint-pydantic = "==0.1.4"
+pylint = "==2.15.4"
 
 [requires]
 python_version = "3.9"
