--- a/python/Pipfile
+++ b/python/Pipfile
@@ -6,6 +6,9 @@ name = "pypi"
 [packages]
 openai = "==0.27.4"
 python-dotenv = "==1.0.0"
+pinecone-client = "==2.2.1"
+pydantic = "==1.10.7"
+argparse= "==1.4.0"
 
 [dev-packages]
 pytest = "5.4.3"
