--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -43,12 +43,16 @@ FROM base AS runtime
 COPY --from=python-deps /.venv /.venv
 # Set virtual env path
 ENV PATH="/.venv/bin:$PATH"
+ENV PY_COLORS=1
 
 # Create and switch to a new user
 RUN useradd --create-home appuser
 WORKDIR /home/appuser
 VOLUME /home/appuser
 USER appuser
+
+# Set PYTHONPATH to include src directory using a relative path
+ENV PYTHONPATH="./src:$PYTHONPATH"
 
 # Install application into container
 COPY ./ ./
