--- a/python/Pipfile
+++ b/python/Pipfile
@@ -12,8 +12,13 @@ argparse= "==1.4.0"
 pytest = "*"
 pygments = "*"
 python-ctags3 = "*"
-langchain = "*"
+langchain = "0.0.141"
 docker = "*"
+pod-gpt = "*"
+wikipedia = "*"
+huggingface-hub = "*"
+google-search-results = "*"
+tiktoken = "*"
 
 [dev-packages]
 pytest = "5.4.3"
