--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,4 @@
 [MESSAGES CONTROL]
-disable=W0621,C0114,C0301,C0116
+load-plugins = pylint_pydantic
+max-line-length = 120
+disable=W1203,R0903,W0105,W0621,C0114,C0301,C0116
