--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,7 @@
 # https://mypy.readthedocs.io/en/stable/config_file.html#config-file-format
 
 [mypy]
+exclude = templates/*
 python_version = 3.10
 plugins = pydantic.mypy
 show_error_codes = true
