--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ cli = "src.main:main"
 python = "^3.9"
 click = "^8.1.3"
 py = "^1.11.0"
-langchain = "^0.0.146"
+langchain = "^0.0.189"
 openai = "^0.27.4"
 faker = "^18.6.0"
 cookiecutter = "^2.1.1"
@@ -23,6 +23,8 @@ ptyprocess = "^0.7.0"
 gradio = "^3.28.1"
 pylint-pydantic = "^0.1.8"
 pre-commit = "^3.3.2"
+chainlit = "^0.2.109"
+google-search-results = "^2.4.2"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.0"
