--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ pylint-pydantic = "^0.1.8"
 pre-commit = "^3.3.2"
 chainlit = "^0.2.109"
 google-search-results = "^2.4.2"
+chromadb = "^0.3.25"
+tiktoken = "^0.4.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.0"
