--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ chainlit = "^0.2.109"
 google-search-results = "^2.4.2"
 chromadb = "^0.3.25"
 tiktoken = "^0.4.0"
+faiss-cpu = "^1.7.4"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.0"
