--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,10 @@ google-search-results = "^2.4.2"
 chromadb = "^0.3.25"
 tiktoken = "^0.4.0"
 faiss-cpu = "^1.7.4"
+python-language-server = {extras = ["all"], version = "^0.36.2"}
+python-lsp-server = "^1.7.3"
+jsonrpcclient = "^4.0.3"
+jsonrpc = "^3.0.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.0"
